loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: Missing closing brace `}' assumed here
while (estFaceMur==false) {
^