loopfor.LoopStairs.scala.code
while (estFaceMur==false) {
  avance()
}
while(estFaceMur==true) {
  gauche(); avance(); droite(); avance()
}
while (estFaceMur==false) {
  avance()